--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@
       color: black;
       font-size: 16px;
       font-family: Helvetica;
+      text-decoration: none;
       line-height: 35px;
       padding: 4px;
       opacity: 0.8;
@@ -113,6 +114,7 @@
       color: black;
       font-size: 16px;
       font-family: Helvetica;
+      text-decoration: none;
       line-height: 35px;
       padding: 5px;
       opacity: 0.8;
