--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,61 @@
   /* Tablet (portrait) */
   @media (min-width: 768px) and (max-width: 1024px) {
   
+    html, body {
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(179, 205, 211);
+      min-height: 100vh;
+    }
+
+    .logo {
+      margin: 0 auto;
+    }
+
+    #navigation_bar img{
+      float: left;
+      height: 50px;
+      margin-top: 11px;
+      margin-left: 30px;
+    }
+
+    #navigation_bar {
+      background-color: #ffffff;
+      height: auto;
+      width: 100%;
+      text-align: right;
+      flex-direction: column;
+    }
+    
+    #navigation_bar ul {
+      padding: 10px;
+      margin: 0px;
+      text-align: right;
+      display: inline-block;
+    }
+    
+    #navigation_bar li {
+      list-style-type: none;
+      padding: 0px;
+      display: inline;
+    }
+    
+    #navigation_bar li a {
+      color: black;
+      font-size: 20px;
+      font-family: Helvetica;
+      text-decoration: none;
+      line-height: 52px;
+      padding: 10px;
+      opacity: 0.8;
+    }
+
     
     
   }
@@ -134,7 +189,7 @@
 /*---------------------------------------------------------------------------------------------*/
   /* Tablet (landscape) */
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  
+
     
     
   }
@@ -143,6 +198,60 @@
   /* Desktop */
   @media (min-width: 1025px) and (max-width: 1280px) {
   
+    html, body {
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(179, 205, 211);
+      min-height: 100vh;
+    }
+
+    .logo {
+      margin: 0 auto;
+    }
+
+    #navigation_bar img{
+      float: left;
+      height: 50px;
+      margin-top: 11px;
+      margin-left: 30px;
+    }
+
+    #navigation_bar {
+      background-color: #ffffff;
+      height: auto;
+      width: 100%;
+      text-align: right;
+      flex-direction: column;
+    }
+    
+    #navigation_bar ul {
+      padding: 10px;
+      margin: 0px;
+      text-align: right;
+      display: inline-block;
+    }
+    
+    #navigation_bar li {
+      list-style-type: none;
+      padding: 0px;
+      display: inline;
+    }
+    
+    #navigation_bar li a {
+      color: black;
+      font-size: 20px;
+      font-family: Helvetica;
+      text-decoration: none;
+      line-height: 52px;
+      padding: 10px;
+      opacity: 0.8;
+    }
     
     
   }
