--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
       padding: 0;
       display: flex;
       flex-direction: column;
-      background-color: rgb(179, 205, 211);
+      background-color: #f5f5f5;
       min-height: 100vh;
     }
 
@@ -33,6 +33,7 @@
       width: 100%;
       text-align: center;
       flex-direction: column;
+      border-bottom: solid thin rgb(100, 96, 96);
     }
     
     #navigation_bar ul {
@@ -74,7 +75,7 @@
       padding: 0;
       display: flex;
       flex-direction: column;
-      background-color: rgb(179, 205, 211);
+      background-color: #f5f5f5;
       min-height: 100vh;
     }
 
@@ -95,6 +96,7 @@
       width: 100%;
       text-align: right;
       flex-direction: column;
+      border-bottom: solid thin rgb(100, 96, 96);
     }
     
     #navigation_bar ul {
@@ -136,7 +138,7 @@
       padding: 0;
       display: flex;
       flex-direction: column;
-      background-color: rgb(179, 205, 211);
+      background-color: #f5f5f5;
       min-height: 100vh;
     }
 
@@ -147,8 +149,8 @@
     #navigation_bar img{
       float: left;
       height: 50px;
-      margin-top: 11px;
-      margin-left: 30px;
+      padding: 10px;
+      margin-left: 50px;
     }
 
     #navigation_bar {
@@ -157,10 +159,11 @@
       width: 100%;
       text-align: right;
       flex-direction: column;
+      border-bottom: solid thin rgb(100, 96, 96);
     }
     
     #navigation_bar ul {
-      padding: 10px;
+      padding: 10px 30px 10px 0px;
       margin: 0px;
       text-align: right;
       display: inline-block;
@@ -182,7 +185,9 @@
       opacity: 0.8;
     }
 
-    
+    #navigation_bar li a:hover {
+      color: #F58F4A;
+    }
     
   }
   
@@ -207,7 +212,7 @@
       padding: 0;
       display: flex;
       flex-direction: column;
-      background-color: rgb(179, 205, 211);
+      background-color: #f5f5f5;
       min-height: 100vh;
     }
 
@@ -218,8 +223,8 @@
     #navigation_bar img{
       float: left;
       height: 50px;
-      margin-top: 11px;
-      margin-left: 30px;
+      padding: 10px;
+      margin-left: 50px;
     }
 
     #navigation_bar {
@@ -228,10 +233,11 @@
       width: 100%;
       text-align: right;
       flex-direction: column;
+      border-bottom: solid thin rgb(100, 96, 96);
     }
     
     #navigation_bar ul {
-      padding: 10px;
+      padding: 10px 30px 10px 0px;
       margin: 0px;
       text-align: right;
       display: inline-block;
@@ -254,7 +260,7 @@
     }
     
     #navigation_bar li a:hover {
-      color: blue;
+      color: #F58F4A;
     }
     
   }
