--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,65 @@
   /* Tablet (landscape) */
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
+    html, body {
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      background-color: #f5f5f5;
+      min-height: 100vh;
+    }
+
+    .logo {
+      margin: 0 auto;
+    }
+
+    #navigation_bar img{
+      float: left;
+      height: 50px;
+      padding: 10px;
+      margin-left: 50px;
+    }
+
+    #navigation_bar {
+      background-color: #ffffff;
+      height: auto;
+      width: 100%;
+      text-align: right;
+      flex-direction: column;
+      border-bottom: solid thin rgb(100, 96, 96);
+    }
     
+    #navigation_bar ul {
+      padding: 10px 30px 10px 0px;
+      margin: 0px;
+      text-align: right;
+      display: inline-block;
+    }
+    
+    #navigation_bar li {
+      list-style-type: none;
+      padding: 0px;
+      display: inline;
+    }
+    
+    #navigation_bar li a {
+      color: black;
+      font-size: 20px;
+      font-family: Helvetica;
+      text-decoration: none;
+      line-height: 52px;
+      padding: 10px;
+      opacity: 0.8;
+    }
+
+    #navigation_bar li a:hover {
+      color: #F58F4A;
+    }
     
   }
 
