--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 /* Smartphones (portrait) */
   @media only screen and (min-width : 320px) and (max-width : 480px) {
     
+  /* ----------Navbar---------- */
   html, body {
       height: 100%;
     }
@@ -66,6 +67,7 @@
   /* Smartphones (landscape) */
   @media (min-width: 481px) and (max-width: 767px) {
   
+    /* ----------Navbar---------- */    
     html, body {
       height: 100%;
     }
@@ -129,6 +131,7 @@
   /* Tablet (portrait) */
   @media (min-width: 768px) and (max-width: 1024px) {
   
+    /* ----------Navbar---------- */
     html, body {
       height: 100%;
     }
@@ -195,6 +198,7 @@
   /* Tablet (landscape) */
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
+    /* ----------Navbar---------- */
     html, body {
       height: 100%;
     }
@@ -261,6 +265,7 @@
   /* Desktop */
   @media (min-width: 1025px) and (max-width: 1280px) {
   
+    /* ----------Navbar---------- */
     html, body {
       height: 100%;
     }
@@ -327,6 +332,7 @@
   /* Desktop for higher resolution */
   @media (min-width: 1281px) {
   
+    /* ----------Navbar---------- */
     html, body {
       height: 100%;
     }
