--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
+h1, h3, h4 {
+font-family: Helvetica;
+}
+
 
 /* Smartphones (portrait) */
-  @media only screen and (min-width : 320px) and (max-width : 480px) {
+  @media only screen and (min-width : 320px) and (max-width : 480px) { 
     
-  /* ----------Navbar---------- */
   html, body {
       height: 100%;
     }
@@ -16,6 +19,7 @@
       min-height: 100vh;
     }
 
+      /* ----------Navbar---------- */
     .logo {
       width: 100%;
       margin: 0 auto;
@@ -60,8 +64,47 @@
       opacity: 0.8;
     }
 
+    /* ----------Header---------- */
+    .header_container {
+      background-image: url("images_csm/toa-heftiba-412579.jpg");
+      background-position: center center;
+      position: relative;
+      height: 500px;
+    }
+
+    .inside_container {
+      margin: 7px;
+    }
+
+    h1 {
+      font-size: 3rem;
+      text-align: center;
+      color: #f5f5f5;
+      padding-top: 1.6rem;
+    }
+
+    h4 {
+      text-align: center;
+      color: #f5f5f5;
+    }
+    
+    .welcome_to {
+      text-align: center;
+      color: #f5f5f5;
+      margin-top: -1.5rem;
+    }
+    
+    .header_bottom {
+      margin-top: 9rem;
+    }
+
+    .admission_fee {
+      font-size: larger;
+      color: #F58F4A;
+    }
 
   }
+
 
   /*---------------------------------------------------------------------------------------------*/  
   /* Smartphones (landscape) */
@@ -126,6 +169,7 @@
     
     
   }
+
 
 /*---------------------------------------------------------------------------------------------*/
   /* Tablet (portrait) */
@@ -194,6 +238,7 @@
     
   }
   
+
 /*---------------------------------------------------------------------------------------------*/
   /* Tablet (landscape) */
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
@@ -261,6 +306,7 @@
     
   }
 
+
 /*---------------------------------------------------------------------------------------------*/
   /* Desktop */
   @media (min-width: 1025px) and (max-width: 1280px) {
@@ -327,6 +373,7 @@
     }
     
   }
+
 
 /*---------------------------------------------------------------------------------------------*/
   /* Desktop for higher resolution */
