--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ font-family: Helvetica;
     
     #navigation_bar li a {
       color: black;
-      font-size: 16px;
+      font-size: 14px;
       font-family: Helvetica;
       text-decoration: none;
       line-height: 35px;
@@ -67,20 +67,20 @@ font-family: Helvetica;
     /* ----------Header---------- */
     .header_container {
       background-image: url("images_csm/toa-heftiba-412579.jpg");
+      /* Image source: Community Science Museum */
       background-position: center center;
       position: relative;
-      height: 500px;
+      height: 400px;
     }
 
-    .inside_container {
+    .inside_header_container {
       margin: 7px;
     }
 
     h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       text-align: center;
       color: #f5f5f5;
-      padding-top: 1.6rem;
     }
 
     h4 {
@@ -89,6 +89,7 @@ font-family: Helvetica;
     }
     
     .welcome_to {
+      font-weight: lighter;
       text-align: center;
       color: #f5f5f5;
       margin-top: -1.5rem;
@@ -159,13 +160,53 @@ font-family: Helvetica;
     
     #navigation_bar li a {
       color: black;
-      font-size: 16px;
+      font-size: 14px;
       font-family: Helvetica;
       text-decoration: none;
       line-height: 35px;
-      padding: 5px;
+      padding: 3px;
       opacity: 0.8;
     }
+    
+        /* ----------Header---------- */
+        .header_container {
+          background-image: url("images_csm/toa-heftiba-412579.jpg");
+          /* Image source: Community Science Museum */
+          background-position: center center;
+          position: relative;
+          height: 400px;
+        }
+    
+        .inside_header_container {
+          margin: 7px;
+        }
+    
+        h1 {
+          font-size: 2.5rem;
+          text-align: center;
+          color: #f5f5f5;
+        }
+    
+        h4 {
+          text-align: center;
+          color: #f5f5f5;
+        }
+        
+        .welcome_to {
+          font-weight: lighter;
+          text-align: center;
+          color: #f5f5f5;
+          margin-top: -1.5rem;
+        }
+        
+        .header_bottom {
+          margin-top: 9rem;
+        }
+    
+        .admission_fee {
+          font-size: larger;
+          color: #F58F4A;
+        }
     
     
   }
@@ -196,8 +237,8 @@ font-family: Helvetica;
     #navigation_bar img{
       float: left;
       height: 50px;
-      padding: 10px;
-      margin-left: 50px;
+      margin: 10px;
+      padding-left: 10%;
     }
 
     #navigation_bar {
@@ -264,8 +305,8 @@ font-family: Helvetica;
     #navigation_bar img{
       float: left;
       height: 50px;
-      padding: 10px;
-      margin-left: 50px;
+      margin: 10px;
+      padding-left: 10%;
     }
 
     #navigation_bar {
@@ -332,8 +373,8 @@ font-family: Helvetica;
     #navigation_bar img{
       float: left;
       height: 50px;
-      padding: 10px;
-      margin-left: 50px;
+      margin: 10px;
+      padding-left: 3%;
     }
 
     #navigation_bar {
@@ -348,6 +389,7 @@ font-family: Helvetica;
     #navigation_bar ul {
       padding: 10px 30px 10px 0px;
       margin: 0px;
+      padding-right: 10%;
       text-align: right;
       display: inline-block;
     }
@@ -400,8 +442,8 @@ font-family: Helvetica;
     #navigation_bar img{
       float: left;
       height: 50px;
-      padding: 10px;
-      margin-left: 50px;
+      margin: 10px;
+      padding-left: 3%;
     }
 
     #navigation_bar {
@@ -416,6 +458,7 @@ font-family: Helvetica;
     #navigation_bar ul {
       padding: 10px 30px 10px 0px;
       margin: 0px;
+      padding-right: 10%;
       text-align: right;
       display: inline-block;
     }
