--- a/pages/visit.css
+++ b/pages/visit.css
@@ -1,4 +1,4 @@
-  h1, h3, h4 {
+h1 {
   font-family: Helvetica;
   }
 
@@ -66,7 +66,7 @@ html, body {
 
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
+    background-image: url("/images_csm/andrew-ruiz-348421.jpg");
     /* Image source: Community Science Museum */
     background-position: center center;
     position: relative;
@@ -74,35 +74,18 @@ html, body {
   }
 
   .inside_header_container {
-    margin: 7px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
   }
 
   h1 {
-    font-size: 2.5rem;
-    text-align: center;
+    font-size: 5rem;
     color: #f5f5f5;
   }
 
-  h4 {
-    text-align: center;
-    color: #f5f5f5;
-  }
-  
-  .welcome_to {
-    font-weight: lighter;
-    text-align: center;
-    color: #f5f5f5;
-    margin-top: -1.5rem;
-  }
-  
-  .header_bottom {
-    margin-top: 9rem;
-  }
-
-  .admission_fee {
-    font-size: larger;
-    color: #F58F4A;
-  }
 
 }
 
@@ -110,7 +93,8 @@ html, body {
 /*---------------------------------------------------------------------------------------------*/  
 /* Smartphones (landscape) */
 @media (min-width: 481px) and (max-width: 767px) {
-   
+
+  /* ----------Navbar---------- */    
   html, body {
     height: 100%;
   }
@@ -124,7 +108,6 @@ html, body {
     min-height: 100vh;
   }
 
-  /* ----------Navbar---------- */
   .logo {
     margin: 0 auto;
   }
@@ -133,7 +116,7 @@ html, body {
     float: left;
     height: 30px;
     margin-top: 11px;
-    margin-left: 3%;
+    margin-left: 10px;
   }
 
   #navigation_bar {
@@ -168,45 +151,27 @@ html, body {
     opacity: 0.8;
   }
   
-      /* ----------Header---------- */
-      .header_container {
-        background-image: url("images_csm/toa-heftiba-412579.jpg");
-        /* Image source: Community Science Museum */
-        background-position: center center;
-        position: relative;
-        height: 400px;
-      }
-  
-      .inside_header_container {
-        margin: 7px;
-      }
-  
-      h1 {
-        font-size: 2.5rem;
-        text-align: center;
-        color: #f5f5f5;
-      }
-  
-      h4 {
-        text-align: center;
-        color: #f5f5f5;
-      }
-      
-      .welcome_to {
-        font-weight: lighter;
-        text-align: center;
-        color: #f5f5f5;
-        margin-top: -1.5rem;
-      }
-      
-      .header_bottom {
-        margin-top: 5rem;
-      }
-  
-      .admission_fee {
-        font-size: larger;
-        color: #F58F4A;
-      }
+  /* ----------Header---------- */
+  .header_container {
+    background-image: url("/images_csm/andrew-ruiz-348421.jpg");
+    /* Image source: Community Science Museum */
+    background-position: center center;
+    position: relative;
+    height: 400px;
+  }
+
+  .inside_header_container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+  }
+
+  h1 {
+    font-size: 5rem;
+    color: #f5f5f5;
+  }
   
   
 }
@@ -216,6 +181,7 @@ html, body {
 /* Tablet (portrait) */
 @media (min-width: 768px) and (max-width: 1024px) {
 
+  /* ----------Navbar---------- */
   html, body {
     height: 100%;
   }
@@ -229,7 +195,6 @@ html, body {
     min-height: 100vh;
   }
 
-  /* ----------Navbar---------- */
   .logo {
     margin: 0 auto;
   }
@@ -279,7 +244,7 @@ html, body {
   
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
+    background-image: url("/images_csm/andrew-ruiz-348421.jpg");
     /* Image source: Community Science Museum */
     background-position: center center;
     position: relative;
@@ -287,35 +252,18 @@ html, body {
   }
 
   .inside_header_container {
-    margin: 7px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
   }
 
   h1 {
-    font-size: 3.5rem;
-    text-align: center;
+    font-size: 5rem;
     color: #f5f5f5;
   }
 
-  h4 {
-    text-align: center;
-    color: #f5f5f5;
-  }
-  
-  .welcome_to {
-    font-weight: lighter;
-    text-align: center;
-    color: #f5f5f5;
-    margin-top: -2rem;
-  }
-  
-  .header_bottom {
-    margin-top: 9rem;
-  }
-
-  .admission_fee {
-    font-size: larger;
-    color: #F58F4A;
-  }
   
 }
 
@@ -324,6 +272,7 @@ html, body {
 /* Tablet (landscape) */
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
+  
   html, body {
     height: 100%;
   }
@@ -387,7 +336,7 @@ html, body {
   
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
+    background-image: url("/images_csm/andrew-ruiz-348421.jpg");
     /* Image source: Community Science Museum */
     background-position: center center;
     position: relative;
@@ -395,35 +344,18 @@ html, body {
   }
 
   .inside_header_container {
-    margin: 7px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
   }
 
   h1 {
-    font-size: 3.5rem;
-    text-align: center;
+    font-size: 5rem;
     color: #f5f5f5;
   }
 
-  h4 {
-    text-align: center;
-    color: #f5f5f5;
-  }
-  
-  .welcome_to {
-    font-weight: lighter;
-    text-align: center;
-    color: #f5f5f5;
-    margin-top: -2rem;
-  }
-  
-  .header_bottom {
-    margin-top: 9rem;
-  }
-
-  .admission_fee {
-    font-size: larger;
-    color: #F58F4A;
-  }
   
 }
 
@@ -432,6 +364,7 @@ html, body {
 /* Desktop */
 @media (min-width: 1025px) and (max-width: 1280px) {
 
+  
   html, body {
     height: 100%;
   }
@@ -496,7 +429,7 @@ html, body {
 
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
+    background-image: url("/images_csm/andrew-ruiz-348421.jpg");
     /* Image source: Community Science Museum */
     background-position: center center;
     position: relative;
@@ -504,35 +437,18 @@ html, body {
   }
 
   .inside_header_container {
-    margin: 7px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
   }
 
   h1 {
-    font-size: 3.5rem;
-    text-align: center;
+    font-size: 7rem;
     color: #f5f5f5;
   }
 
-  h4 {
-    text-align: center;
-    color: #f5f5f5;
-  }
-  
-  .welcome_to {
-    font-weight: lighter;
-    text-align: center;
-    color: #f5f5f5;
-    margin-top: -2rem;
-  }
-  
-  .header_bottom {
-    margin-top: 9rem;
-  }
-
-  .admission_fee {
-    font-size: larger;
-    color: #F58F4A;
-  }
   
 }
 
@@ -541,6 +457,7 @@ html, body {
 /* Desktop for higher resolution */
 @media (min-width: 1281px) {
 
+  
   html, body {
     height: 100%;
   }
@@ -605,7 +522,7 @@ html, body {
 
 /* ----------Header---------- */
 .header_container {
-  background-image: url("images_csm/toa-heftiba-412579.jpg");
+  background-image: url("/images_csm/andrew-ruiz-348421.jpg");
   /* Image source: Community Science Museum */
   background-position: center center;
   position: relative;
@@ -613,34 +530,17 @@ html, body {
 }
 
 .inside_header_container {
-  margin: 7px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
 h1 {
-  font-size: 3.5rem;
-  text-align: center;
+  font-size: 7rem;
   color: #f5f5f5;
 }
 
-h4 {
-  text-align: center;
-  color: #f5f5f5;
-}
-
-.welcome_to {
-  font-weight: lighter;
-  text-align: center;
-  color: #f5f5f5;
-  margin-top: -2rem;
-}
-
-.header_bottom {
-  margin-top: 9rem;
-}
-
-.admission_fee {
-  font-size: larger;
-  color: #F58F4A;
-}
 
 }
