--- a/pages/visit.css
+++ b/pages/visit.css
@@ -2,7 +2,6 @@ h1 {
   font-family: Helvetica;
   }
 
-
 /* Smartphones (portrait) */
 @media only screen and (min-width : 320px) and (max-width : 480px) { 
   
@@ -239,7 +238,7 @@ html, body {
   }
 
   #navigation_bar li a:hover {
-    color: #F58F4A;
+    text-decoration: underline;
   }
   
   /* ----------Header---------- */
@@ -331,7 +330,7 @@ html, body {
   }
 
   #navigation_bar li a:hover {
-    color: #F58F4A;
+    text-decoration: underline;
   }
   
   /* ----------Header---------- */
@@ -424,7 +423,7 @@ html, body {
   }
   
   #navigation_bar li a:hover {
-    color: #F58F4A;
+    text-decoration: underline;
   }
 
   /* ----------Header---------- */
@@ -517,7 +516,7 @@ html, body {
   }
   
   #navigation_bar li a:hover {
-    color: #F58F4A;
+    text-decoration: underline;
   }
 
 /* ----------Header---------- */
