Background image added for all pages

--- a/pages/visit.css
+++ b/pages/visit.css
@@ -81,8 +81,9 @@ html, body {
   }
 
   h1 {
-    font-size: 5rem;
+    font-size: 4rem;
     color: #f5f5f5;
+    text-shadow: 1px 1px 1px #000;
   }
 
 
@@ -168,8 +169,9 @@ html, body {
   }
 
   h1 {
-    font-size: 5rem;
+    font-size: 4rem;
     color: #f5f5f5;
+    text-shadow: 1px 1px 1px #000;
   }
   
   
@@ -261,6 +263,7 @@ html, body {
   h1 {
     font-size: 5rem;
     color: #f5f5f5;
+    text-shadow: 1px 1px 1px #000;
   }
 
   
@@ -353,6 +356,7 @@ html, body {
   h1 {
     font-size: 5rem;
     color: #f5f5f5;
+    text-shadow: 1px 1px 1px #000;
   }
 
   
@@ -446,6 +450,7 @@ html, body {
   h1 {
     font-size: 7rem;
     color: #f5f5f5;
+    text-shadow: 1px 1px 1px #000;
   }
 
   
@@ -539,6 +544,7 @@ html, body {
 h1 {
   font-size: 7rem;
   color: #f5f5f5;
+  text-shadow: 1px 1px 1px #000;
 }
 
 
