--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ html, body {
 
   h1 {
     font-size: 2.5rem;
+    text-shadow: 1px 1px 1px #000;
     text-align: center;
     color: #f5f5f5;
   }
@@ -168,45 +169,46 @@ html, body {
     opacity: 0.8;
   }
   
-      /* ----------Header---------- */
-      .header_container {
-        background-image: url("images_csm/toa-heftiba-412579.jpg");
-        /* Image source: Community Science Museum */
-        background-position: center center;
-        position: relative;
-        height: 400px;
-      }
+  /* ----------Header---------- */
+  .header_container {
+    background-image: url("images_csm/toa-heftiba-412579.jpg");
+    /* Image source: Community Science Museum */
+    background-position: center center;
+    position: relative;
+    height: 400px;
+  }
+
+  .inside_header_container {
+    margin: 7px;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+    text-shadow: 1px 1px 1px #000;
+    text-align: center;
+    color: #f5f5f5;
+  }
+
+  h4 {
+    text-align: center;
+    color: #f5f5f5;
+  }
   
-      .inside_header_container {
-        margin: 7px;
-      }
+  .welcome_to {
+    font-weight: lighter;
+    text-align: center;
+    color: #f5f5f5;
+    margin-top: -1.5rem;
+  }
   
-      h1 {
-        font-size: 2.5rem;
-        text-align: center;
-        color: #f5f5f5;
-      }
-  
-      h4 {
-        text-align: center;
-        color: #f5f5f5;
-      }
-      
-      .welcome_to {
-        font-weight: lighter;
-        text-align: center;
-        color: #f5f5f5;
-        margin-top: -1.5rem;
-      }
-      
-      .header_bottom {
-        margin-top: 5rem;
-      }
-  
-      .admission_fee {
-        font-size: larger;
-        color: #F58F4A;
-      }
+  .header_bottom {
+    margin-top: 5rem;
+  }
+
+  .admission_fee {
+    font-size: larger;
+    color: #F58F4A;
+  }
   
   
 }
@@ -292,6 +294,7 @@ html, body {
 
   h1 {
     font-size: 3.5rem;
+    text-shadow: 1px 1px 1px #000;
     text-align: center;
     color: #f5f5f5;
   }
@@ -400,6 +403,7 @@ html, body {
 
   h1 {
     font-size: 3.5rem;
+    text-shadow: 1px 1px 1px #000;
     text-align: center;
     color: #f5f5f5;
   }
@@ -509,6 +513,7 @@ html, body {
 
   h1 {
     font-size: 3.5rem;
+    text-shadow: 1px 1px 1px #000;
     text-align: center;
     color: #f5f5f5;
   }
@@ -618,6 +623,7 @@ html, body {
 
 h1 {
   font-size: 3.5rem;
+  text-shadow: 1px 1px 1px #000;
   text-align: center;
   color: #f5f5f5;
 }
