--- a/styles.css
+++ b/styles.css
@@ -504,7 +504,9 @@ html, body {
     /* Image source: Community Science Museum */
     background-position: center center;
     position: relative;
-    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
   }
 
   .inside_header_container {
@@ -614,7 +616,9 @@ html, body {
   /* Image source: Community Science Museum */
   background-position: center center;
   position: relative;
-  height: 400px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
 }
 
 .inside_header_container {
