--- a/pages/news.css
+++ b/pages/news.css
@@ -436,7 +436,9 @@ html, body {
     /* Image source: <https://unsplash.com/photos/HeNrEdA4Zp4> author: Utsav Srestha on Unsplash */
     background-position: center center;
     position: relative;
-    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
   }
 
   .inside_header_container {
@@ -530,7 +532,9 @@ html, body {
     /* Image source: <https://unsplash.com/photos/HeNrEdA4Zp4> author: Utsav Srestha on Unsplash */
   background-position: center center;
   position: relative;
-  height: 400px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
 }
 
 .inside_header_container {
