--- a/pages/visit.css
+++ b/pages/visit.css
@@ -436,7 +436,9 @@ html, body {
     /* Image source: Community Science Museum */
     background-position: center center;
     position: relative;
-    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
   }
 
   .inside_header_container {
@@ -530,7 +532,9 @@ html, body {
   /* Image source: Community Science Museum */
   background-position: center center;
   position: relative;
-  height: 400px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
 }
 
 .inside_header_container {
