--- a/styles.css
+++ b/styles.css
@@ -506,7 +506,7 @@ html, body {
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 500px;
+    height: 60vh;
   }
 
   .inside_header_container {
@@ -514,7 +514,7 @@ html, body {
   }
 
   h1 {
-    font-size: 3.5rem;
+    font-size: 5rem;
     text-shadow: 1px 1px 1px #000;
     text-align: center;
     color: #f5f5f5;
@@ -529,7 +529,7 @@ html, body {
     font-weight: lighter;
     text-align: center;
     color: #f5f5f5;
-    margin-top: -2rem;
+    margin-top: -3rem;
   }
   
   .header_bottom {
@@ -618,7 +618,7 @@ html, body {
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 500px;
+    height: 60vh;
   }
   
   .inside_header_container {
@@ -626,7 +626,7 @@ html, body {
   }
   
   h1 {
-    font-size: 3.5rem;
+    font-size: 5rem;
     text-shadow: 1px 1px 1px #000;
     text-align: center;
     color: #f5f5f5;
@@ -641,7 +641,7 @@ html, body {
     font-weight: lighter;
     text-align: center;
     color: #f5f5f5;
-    margin-top: -2rem;
+    margin-top: -3rem;
   }
   
   .header_bottom {
