--- a/pages/visit.css
+++ b/pages/visit.css
@@ -438,7 +438,7 @@ html, body {
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 500px;
+    height: 60vh;
   }
 
   .inside_header_container {
@@ -534,7 +534,7 @@ html, body {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 500px;
+  height: 60vh;
 }
 
 .inside_header_container {
