--- a/pages/explore.css
+++ b/pages/explore.css
@@ -2,6 +2,11 @@ h1 {
   font-family: Helvetica;
   }
 
+  .on_this_page {
+    text-decoration: underline;
+    font-weight: 900;
+  }
+
 /* Smartphones (portrait) */
 @media only screen and (min-width : 320px) and (max-width : 480px) { 
   
