--- a/pages/news.css
+++ b/pages/news.css
@@ -6,7 +6,7 @@ h1 {
     text-decoration: underline;
     font-weight: 900;
   }
-  
+
 /* Smartphones (portrait) */
 @media only screen and (min-width : 320px) and (max-width : 480px) { 
   
@@ -480,6 +480,7 @@ html, body {
     flex-direction: column;
     background-color: #f5f5f5;
     min-height: 100vh;
+    max-width: 1920px;
   }
 
   /* ----------Navbar---------- */
