--- a/styles.css
+++ b/styles.css
@@ -563,6 +563,7 @@ html, body {
       flex-direction: column;
       background-color: #f5f5f5;
       min-height: 100vh;
+      max-width: 1920px;
     }
   
     /* ----------Navbar---------- */
