updated author name on background image

--- a/pages/connect.css
+++ b/pages/connect.css
@@ -71,7 +71,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/william-bout-264826.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: William Bout */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -159,7 +159,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/william-bout-264826.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: William Bout */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -251,7 +251,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/william-bout-264826.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: William Bout */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -344,7 +344,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/william-bout-264826.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: William Bout */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -438,7 +438,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/william-bout-264826.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: William Bout */
     background-position: center center;
     position: relative;
     background-repeat: no-repeat;
@@ -535,7 +535,7 @@ html, body {
 /* ----------Header---------- */
 .header_container {
   background-image: url("/images_csm/william-bout-264826.jpg");
-  /* Image source: Community Science Museum */
+  /* Image source: Community Science Museum, author: William Bout */
   background-position: center center;
   position: relative;
   background-repeat: no-repeat;
