--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Toa Heftiba */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -176,7 +176,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Toa Heftiba */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -286,7 +286,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Toa Heftiba */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -395,7 +395,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Toa Heftiba */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -505,7 +505,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Toa Heftiba */
     background-position: center center;
     position: relative;
     background-repeat: no-repeat;
@@ -619,7 +619,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Toa Heftiba */
     background-position: center center;
     position: relative;
     background-repeat: no-repeat;
