--- a/pages/visit.css
+++ b/pages/visit.css
@@ -71,7 +71,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/andrew-ruiz-348421.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Andrew Ruiz */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -159,7 +159,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/andrew-ruiz-348421.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Andrew Ruiz */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -251,7 +251,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/andrew-ruiz-348421.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Andrew Ruiz */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -344,7 +344,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/andrew-ruiz-348421.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Andrew Ruiz */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -438,7 +438,7 @@ html, body {
   /* ----------Header---------- */
   .header_container {
     background-image: url("/images_csm/andrew-ruiz-348421.jpg");
-    /* Image source: Community Science Museum */
+    /* Image source: Community Science Museum, author: Andrew Ruiz */
     background-position: center center;
     position: relative;
     background-repeat: no-repeat;
@@ -535,7 +535,7 @@ html, body {
 /* ----------Header---------- */
 .header_container {
   background-image: url("/images_csm/andrew-ruiz-348421.jpg");
-  /* Image source: Community Science Museum */
+  /* Image source: Community Science Museum, author: Andrew Ruiz */
   background-position: center center;
   position: relative;
   background-repeat: no-repeat;
