--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap');
+  
   h1, h3, h4 {
   font-family: Helvetica;
   }
 
   h3 {
     color: #1A1A1A;
+  }
+
+  p {
+    font-family: 'Roboto', sans-serif;
+    color: #1a1a1a;
   }
 
   .on_this_page {
@@ -115,7 +122,7 @@ html, body {
 
   /* ----------Below Header---------- */
   .join_us_textbox {
-    margin: 10px;
+    margin: 3rem 0.4rem 3rem 0.4rem;
     text-align: center;
   }
 
@@ -123,6 +130,57 @@ html, body {
     color: #1A1A1A;
     font-weight: initial;
   }
+
+  /* ----------Articles---------- */
+  .upper_section {
+    margin: 0 0.4rem 0 0.4rem;
+  }
+
+  .upper_section img {
+    width: 100%;
+    height: auto;
+  }
+
+  .photo_text {
+    opacity: 70%;
+    font-size: x-small;
+    margin-top: -0.15rem;
+  }
+
+  .lower_section {
+    margin: 1rem 0.4rem 0 0.4rem;
+  }
+
+  .lower_section img {
+    width: 100%;
+    height: auto;
+  }
+
+  .article_text {
+    margin: 1.5rem 0.4rem 1.5rem 0.4rem;
+    font-size: 16px;
+  }
+
+  /* ----------Footer---------- */
+footer {
+  margin: 5rem 0rem 0 0rem;
+  background-color: #8B9096;
+}
+
+  footer h4 {
+    color: #1A1A1A;
+    text-align: left;
+  }
+
+  .address, .hours {
+    margin: 3rem 0rem 3rem 3rem;
+  }
+
+  .address p {
+    margin: 0 0 -0.03rem 0;
+  }
+
+
 }
 
 
