--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,17 @@ html, body {
     padding-bottom: 3px;
   }
 
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+  
+  footer p {
+    opacity: 70%;
+  }
 
 }
 
@@ -383,6 +394,17 @@ html, body {
     padding-bottom: 3px;
   }
 
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+  
+  footer p {
+    opacity: 70%;
+  }
 
 }
 
@@ -577,126 +599,17 @@ html, body {
   margin: 0;
   padding-bottom: 3px;
   }
-  
-}
 
-
-/*---------------------------------------------------------------------------------------------*/
-/* Tablet (landscape) */
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-
-  html, body {
-    height: 100%;
-  }
-
-  body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-
-  /* ----------Navbar---------- */
-  .logo {
-    margin: 0 auto;
-  }
-
-  #navigation_bar img{
-    float: left;
-    height: 50px;
-    margin: 10px;
-    padding-left: 3%;
-  }
-
-  #navigation_bar {
-    background-color: #ffffff;
-    height: auto;
-    width: 100%;
-    text-align: right;
-    flex-direction: column;
-    border-bottom: solid thin rgb(100, 96, 96);
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
   }
   
-  #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
-    margin: 0px;
-    text-align: right;
-    display: inline-block;
-  }
-  
-  #navigation_bar li {
-    list-style-type: none;
-    padding: 0px;
-    display: inline;
-  }
-  
-  #navigation_bar li a {
-    color: black;
-    font-size: 20px;
-    font-family: Helvetica;
-    text-decoration: none;
-    line-height: 52px;
-    padding: 10px;
-    opacity: 0.8;
-  }
-
-  #navigation_bar li a:hover {
-    text-decoration: underline;
-  }
-  
-  /* ----------Header---------- */
-  .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum, author: Toa Heftiba */
-    background-position: center center;
-    position: relative;
-    height: 400px;
-  }
-
-  .inside_header_container {
-    margin: 7px;
-  }
-
-  h1 {
-    font-size: 3.5rem;
-    text-shadow: 1px 1px 1px #000;
-    text-align: center;
-    color: #f5f5f5;
-  }
-
-  h4 {
-    text-align: center;
-    color: #f5f5f5;
-  }
-  
-  .welcome_to {
-    font-weight: lighter;
-    text-align: center;
-    color: #f5f5f5;
-    margin-top: -2rem;
-  }
-  
-  .header_bottom {
-    margin-top: 9rem;
-    opacity: 90%;
-  }
-
-  .admission_fee {
-    font-size: larger;
-    color: #F58F4A;
-  }
-
-  /* ----------Below Header---------- */
-  .join_us_textbox {
-    margin: 3rem 10vw 3rem 10vw;
-    text-align: center;
-  }
-
-  h3 {
-    color: #1A1A1A;
-    font-weight: initial;
-    font-size: 1.5rem;
+  footer p {
+    opacity: 70%;
   }
   
 }
@@ -913,6 +826,17 @@ html, body {
     margin: 0;
     padding-bottom: 3px;
     }
+  /* ----------Footer---------- */
+  footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+  }
+
+  footer p {
+    opacity: 70%;
+  }
   
 }
 
@@ -1130,5 +1054,17 @@ html, body {
   margin: 0;
   padding-bottom: 3px;
 }
-  
+
+/* ----------Footer---------- */
+footer {
+  background-color: #8B9096;
+  font-size: x-small;
+  font-weight: lighter;
+  text-align: center;
+}
+
+footer p {
+  opacity: 70%;
+}
+
 }
