updated background image on main page

--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,8 @@ html, body {
 
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum, author: Toa Heftiba */
+    background-image: url("images_csm/joshua-rawson-harris-WLXkaubn0Ig-unsplash.jpg");
+    /* Image source: url<https://unsplash.com/photos/WLXkaubn0Ig>, Photo by Joshua Rawson-Harris on Unsplash */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -268,8 +268,8 @@ html, body {
   
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum, author: Toa Heftiba */
+    background-image: url("images_csm/joshua-rawson-harris-WLXkaubn0Ig-unsplash.jpg");
+    /* Image source: url<https://unsplash.com/photos/WLXkaubn0Ig>, Photo by Joshua Rawson-Harris on Unsplash */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -465,8 +465,8 @@ html, body {
   
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum, author: Toa Heftiba */
+    background-image: url("images_csm/joshua-rawson-harris-WLXkaubn0Ig-unsplash.jpg");
+    /* Image source: url<https://unsplash.com/photos/WLXkaubn0Ig>, Photo by Joshua Rawson-Harris on Unsplash */
     background-position: center center;
     position: relative;
     height: 400px;
@@ -670,8 +670,8 @@ html, body {
 
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum, author: Toa Heftiba */
+    background-image: url("images_csm/joshua-rawson-harris-WLXkaubn0Ig-unsplash.jpg");
+    /* Image source: url<https://unsplash.com/photos/WLXkaubn0Ig>, Photo by Joshua Rawson-Harris on Unsplash */
     background-position: center center;
     position: relative;
     background-repeat: no-repeat;
@@ -903,8 +903,8 @@ html, body {
   
   /* ----------Header---------- */
   .header_container {
-    background-image: url("images_csm/toa-heftiba-412579.jpg");
-    /* Image source: Community Science Museum, author: Toa Heftiba */
+    background-image: url("images_csm/joshua-rawson-harris-WLXkaubn0Ig-unsplash.jpg");
+    /* Image source: url<https://unsplash.com/photos/WLXkaubn0Ig>, Photo by Joshua Rawson-Harris on Unsplash */
     background-position: center center;
     position: relative;
     background-repeat: no-repeat;
