--- a/pages/connect.css
+++ b/pages/connect.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap');
 
 
-  h1 {
+  h1, h4 {
   font-family: Helvetica;
   }
 
@@ -144,6 +144,7 @@
 
   .section_one h2, .section_two h2 {
     margin: 1.5rem 0 0 0.4rem;
+    font-weight: bold;
   }
 
   /* ----------Bottom---------- */
@@ -313,6 +314,7 @@
 
   .section_one h2, .section_two h2 {
     margin: 1.5rem 0 0 1rem;
+    font-weight: bold;
   }
 
   /* ----------Bottom---------- */
@@ -467,7 +469,7 @@
 
    /* ----------Articles---------- */
    .section_one, .section_two {
-    margin: 0 2rem 0 2rem;
+    margin: 0 4rem 0 4rem;
     background-color: #F1F2F6;
   }
 
@@ -499,6 +501,7 @@
   .section_one h2, .section_two h2 {
     margin: 1.5rem 0 0 1rem;
     font-size: xx-large;
+    font-weight: bold;
   }
 
   /* ----------Bottom---------- */
