--- a/pages/explore.css
+++ b/pages/explore.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap');
 
 
-h1 {
+h1, h4 {
   font-family: Helvetica;
   }
 
@@ -104,6 +104,7 @@ html, body {
   .title_text {
     margin: 3rem 0.4rem 3rem 0.4rem;
     text-align: center;
+    font-size: initial;
   }
 
   h2 {
@@ -144,6 +145,7 @@ html, body {
 
   .section_one h2, .section_two h2 {
     margin: 1.5rem 0 0 0.4rem;
+    font-weight: bolder;
   }
 
   /* ----------Bottom---------- */
@@ -273,6 +275,7 @@ html, body {
    .title_text {
     margin: 3rem 2rem 3rem 2rem;
     text-align: center;
+    font-size: initial;
   }
 
   h2 {
@@ -313,6 +316,7 @@ html, body {
 
   .section_one h2, .section_two h2 {
     margin: 1.5rem 0 0 1rem;
+    font-weight: bolder;
   }
 
   /* ----------Bottom---------- */
@@ -455,6 +459,7 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.2rem;
   }
 
   h2 {
@@ -465,7 +470,7 @@ html, body {
 
    /* ----------Articles---------- */
    .section_one, .section_two {
-    margin: 0 2rem 0 2rem;
+    margin: 0 4rem 0 4rem;
     background-color: #F1F2F6;
   }
 
@@ -495,8 +500,9 @@ html, body {
   }
 
   .section_one h2, .section_two h2 {
-    margin: 1.5rem 0 0 1rem;
+    margin: 1.5rem 0 0 1rem; 
     font-size: xx-large;
+    font-weight: bolder;
   }
 
   /* ----------Bottom---------- */
@@ -649,6 +655,7 @@ html, body {
     font-size: 1.8rem;
     color: #1A1A1A;
     font-weight: initial;
+    font-size: 1.2rem;
   }
   
   /* ----------Articles---------- */
@@ -867,7 +874,7 @@ h1 {
   justify-content: center;
   color: #1A1A1A;
   font-weight: initial;
-  font-size: 1.8rem;
+  font-size: 1.3rem;
 }
 
 /* ----------Articles---------- */
