--- a/pages/exhibition.css
+++ b/pages/exhibition.css
@@ -54,7 +54,6 @@ html, body {
     width: 100%;
     text-align: center;
     flex-direction: column;
-    border-bottom: solid thin rgb(100, 96, 96);
   }
   
   #navigation_bar ul {
@@ -102,9 +101,8 @@ html, body {
 
   /* ----------Below Header---------- */
   .title_text {
-    margin: 3rem 0.4rem 3rem 0.4rem;
+    margin: 5rem 0.4rem 5rem 0.4rem;
     text-align: center;
-    font-size: initial;
   }
 
   h2 {
@@ -115,7 +113,7 @@ html, body {
   /* ----------Articles---------- */
   .section_one, .section_two {
     margin: 0 1rem 0 1rem;
-    background-color: #F1F2F6;
+    background: #F1F2F6;
   }
 
   .section_one img {
@@ -225,7 +223,6 @@ html, body {
     width: 100%;
     text-align: right;
     flex-direction: column;
-    border-bottom: solid thin rgb(100, 96, 96);
   }
   
   #navigation_bar ul {
@@ -274,9 +271,8 @@ html, body {
   
    /* ----------Below Header---------- */
    .title_text {
-    margin: 3rem 2rem 3rem 2rem;
+    margin: 5rem 2rem 5rem 2rem;
     text-align: center;
-    font-size: initial;
   }
 
   h2 {
@@ -403,7 +399,6 @@ html, body {
     width: 100%;
     text-align: right;
     flex-direction: column;
-    border-bottom: solid thin rgb(100, 96, 96);
   }
   
   #navigation_bar ul {
@@ -455,7 +450,7 @@ html, body {
 
   /* ----------Below Header---------- */
   .title_text {
-    margin: 3rem 20vw 3rem 20vw;
+    margin: 5rem 20vw 5rem 20vw;
     text-align: center;
     display: flex;
     align-items: center;
@@ -465,7 +460,6 @@ html, body {
   h2 {
     color: #1A1A1A;
     font-weight: initial;
-    font-size: 1.2rem;
   }
 
    /* ----------Articles---------- */
@@ -592,7 +586,6 @@ html, body {
     width: 100%;
     text-align: right;
     flex-direction: column;
-    border-bottom: solid thin rgb(100, 96, 96);
   }
   
   #navigation_bar ul {
@@ -647,12 +640,11 @@ html, body {
 
   /* ----------Below Header---------- */
   .title_text {
-    margin: 4rem 20vw 2rem 20vw;
+    margin: 5rem 20vw 4rem 20vw;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.2rem;
     color: #1A1A1A;
     font-weight: initial;
   }
@@ -810,7 +802,6 @@ html, body {
     width: 100%;
     text-align: right;
     flex-direction: column;
-    border-bottom: solid thin rgb(100, 96, 96);
   }
   
   #navigation_bar ul {
@@ -865,14 +856,13 @@ h1 {
 
 /* ----------Below Header---------- */
 .title_text {
-  margin: 4rem 0 2rem 0vw;
+  margin: 5rem 0 4rem 0vw;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #1A1A1A;
   font-weight: initial;
-  font-size: 1.3rem;
 }
 
 /* ----------Articles---------- */
